[tool.poetry]
name = "couchbase-lite-python"
version = "0.1.0"
description = ""
authors = ["Michael V. Battista <github@mvbattista.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cffi = "^1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
